# telegram-media-dl

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
telegram_media_dl/: __init__.py  bot.py  cli.py  config.py  database.py  downloader.py  handlers.py  keyboards.py  middleware.py  queue_manager.py  rate_limiter.py  search.py  utils.py
telegram_media_dl/handlers/: __init__.py  admin.py  commands.py  downloads.py  settings.py
tests/: conftest.py  test_cli.py  test_database.py  test_downloader.py  test_handlers_admin.py  test_handlers_commands.py  test_handlers_downloads.py  test_handlers_settings.py  test_middleware.py  test_queue.py  test_rate_limiter.py  test_search.py  test_utils.py
