[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-media-dl"
version = "1.0.0"
description = "Production-grade Telegram bot for downloading media from 50+ sites"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Akibuzzaman Akib", email = "akib473@github.com" }
]
keywords = ["telegram", "bot", "downloader", "youtube", "media", "yt-dlp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Video",
    "Framework :: AsyncIO",
]
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.34.0",
    "yt-dlp>=2024.1.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
]

[project.scripts]
tmdl = "telegram_media_dl.cli:main"

[project.urls]
Homepage = "https://github.com/AKIB473/telegram-media-dl"
Repository = "https://github.com/AKIB473/telegram-media-dl"
"Bug Tracker" = "https://github.com/AKIB473/telegram-media-dl/issues"

[tool.hatch.build.targets.wheel]
packages = ["telegram_media_dl"]

[tool.hatch.build.targets.sdist]
include = [
    "telegram_media_dl/",
    "README.md",
    "LICENSE",
    ".env.example",
    "requirements.txt",
]
