[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-media-dl"
version = "2.0.0"
description = "Download media from Telegram-linked URLs via yt-dlp and aiogram 3"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7.0",
    "yt-dlp>=2024.1.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.0.0",
    "mutagen>=1.47.0",
    "Pillow>=10.0.0",
    "cachetools>=5.3.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
tmdl = "telegram_media_dl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["telegram_media_dl*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
